--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -266,6 +266,7 @@
                     history_dialog.open();
                 });
             }
+            $('[autofocus="yes"], [autofocus="autofocus"], [autofocus="true"]').focus();
         });
     </script>
 </body>
